--- a/BlazorTool.Client/Pages/OrdersPage.razor
+++ b/BlazorTool.Client/Pages/OrdersPage.razor
@@ -259,7 +259,7 @@ else
     private bool isOrderCardOpen = false;
     private MultiSelectTagMode TagMode { get; set; } = MultiSelectTagMode.Single;
     private int? MaxAllowedTags { get; set; }
-    private List<Dict> dicts = new List<Dict>();
+    private List<WODict> dicts = new List<WODict>();
     private Person currentUser = new Person();
     private string dateColumnsize = "9rem";
 
