--- a/BlazorTool.Client/Components/SchedulerItem.razor
+++ b/BlazorTool.Client/Components/SchedulerItem.razor
@@ -6,15 +6,15 @@
     @if (View == SchedulerView.Month)
     {
         <div class="scheduler-item-month">
-            <span class="item-asset">[@Item.AppointmentId] @Item.AssetNo</span>
-            <span class="item-assignee">@Localizer["SchedulerItem_Arrow"] @Item.DepName: @Item.AssignedPerson</span>
+            <span class="item-asset">@Item.AssetNo</span>
+            <span class="item-assignee"> : @Item.WODesc</span>
         </div>
     }
     else if(View == SchedulerView.Timeline)
     {
         <div class="scheduler-item-month">
-            <span class="item-asset">[@Item.AppointmentId] @Item.AssetNo</span>
-            <span class="item-assignee">@Localizer["SchedulerItem_Arrow"] @Item.DepName: @Item.Description</span>
+            <span class="item-asset">@Item.AssetNo</span>
+            <span class="item-assignee">: @Item.Description</span>
         </div>
     }
     else // Week or Day view
@@ -24,7 +24,7 @@
             <div class="item-body">
                 @if (!string.IsNullOrEmpty(Item.DepName))
                 {
-                    <span>@Item.DepName@Localizer["SchedulerItem_Colon"]</span>
+                    <span>@Item.DepName : </span>
                 }
                 <span>@Item.AssignedPerson</span>
             </div>
