--- a/BlazorTool.Client/Pages/SchedulerPage.razor
+++ b/BlazorTool.Client/Pages/SchedulerPage.razor
@@ -321,7 +321,8 @@
             isEditable=true 
             ListPersons="@PersonsNames.Where(c=>c != "All").ToList()"
             currentUser="@currentUser"
-            OnAppointmentChanged="@RefreshData" />
+            OnAppointmentChanged="@RefreshData" 
+            isScheduler = "true"/>
     </WindowContent>
 </TelerikWindow>
 
