--- a/BlazorTool.Client/Components/JoinToActivityForm.razor
+++ b/BlazorTool.Client/Components/JoinToActivityForm.razor
@@ -16,23 +16,29 @@
         <FormItems>
             <div class="form-layout">
                 <div class="form-left">
-                    <FormItem Field="@nameof(Model.PersonID)" LabelText="@Localizer["SchedulerSummary_Person"]">
+                    <FormItem Field="@nameof(Model.PersonID)">
                         <Template>
-                            <TelerikComboBox Data="@People"
-                                             @bind-Value="@Model.PersonID"
-                                             ValueField="@nameof(Person.PersonId)"
-                                             TextField="@nameof(Person.Name)"
-                                             Placeholder="@Localizer["WorkOrder_SelectPerson"]"
-                                             Filterable="true"
-                                             ShowClearButton="true">
-                            </TelerikComboBox>
+                            <div style="display: flex; align-items: center;">
+                                <label class="k-label k-form-label" style="min-width: 100px; margin-right: 5px;">@Localizer["SchedulerSummary_Person"]:</label>
+                                <TelerikComboBox Data="@People"
+                                                 @bind-Value="@Model.PersonID"
+                                                 ValueField="@nameof(Person.PersonId)"
+                                                 TextField="@nameof(Person.Name)"
+                                                 Placeholder="@Localizer["WorkOrder_SelectPerson"]"
+                                                 Filterable="true"
+                                                 ShowClearButton="true">
+                                </TelerikComboBox>
+                            </div>
                             <ValidationMessage For="@(() => Model.PersonID)" />
                         </Template>
                     </FormItem>
 
-                    <FormItem Field="@nameof(Model.WorkLoad)" LabelText="@Localizer["ActivityList_Workload"]">
+                    <FormItem Field="@nameof(Model.WorkLoad)">
                         <Template>
-                            <TelerikNumericTextBox @bind-Value="Model.WorkLoad" Format="n2" />
+                            <div style="display: flex; align-items: center;">
+                                <label class="k-label k-form-label" style="min-width: 100px; margin-right: 5px;">@Localizer["ActivityList_Workload"]:</label>
+                                <TelerikNumericTextBox @bind-Value="Model.WorkLoad" Format="n2" Step="0.25m" Placeholder="@Localizer["ActivityList_Workload_Placeholder"]"/>
+                            </div>
                             <ValidationMessage For="@(() => Model.WorkLoad)" />
                         </Template>
                     </FormItem>
@@ -41,9 +47,11 @@
             </div>
         </FormItems>
         <FormButtons>
-            <TelerikButton ButtonType="ButtonType.Submit" ThemeColor="primary">
-                @Localizer["Add"] @(People.FirstOrDefault(p=>p.PersonId == Model.PersonID)?.Name??"")</TelerikButton>
-            <TelerikButton ButtonType="ButtonType.Button" OnClick="OnCancelhandler" ThemeColor="secondary">@Localizer["Settings_Cancel"]</TelerikButton>
+            <div style="display: flex; justify-content: center; gap: 50px;     width: 100%;">
+                <TelerikButton ButtonType="ButtonType.Submit" ThemeColor="primary">
+                    @Localizer["Add"] @(People.FirstOrDefault(p=>p.PersonId == Model.PersonID)?.Name??"")</TelerikButton>
+                <TelerikButton ButtonType="ButtonType.Button" OnClick="OnCancelhandler" ThemeColor="secondary">@Localizer["Settings_Cancel"]</TelerikButton>
+            </div>
         </FormButtons>
 
     </TelerikForm>
@@ -66,7 +74,7 @@
     protected override void OnInitialized()
     {
         Model.PersonID = 1;
-        Model.WorkLoad = 0;
+        Model.WorkLoad = 0.25m;
         Model.ActivityID = ActivityID;
         People = ApiClient.GetAllPersonsCached(); // From cache
     }
