--- a/BlazorTool.Client/Pages/Home.razor
+++ b/BlazorTool.Client/Pages/Home.razor
@@ -1,9 +1,15 @@
 ﻿@page "/"
+@using BlazorTool.Client.Services
 @inject NavigationManager NavigationManager
 @inject IStringLocalizer<Resources.UIStrings> Localizer
+@inject ApiServiceClient ApiClient
+@inject UserState UserState
 
+<BlazorTool.Client.Components.CheckSession ApiService="@ApiClient" UserState="@UserState" />
 <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Warning" @onclick="OnOrderClick">@Localizer["Home_Orders"]</TelerikButton>
 <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Success" @onclick="OnSchedulerClick">@Localizer["Home_Scheduler"]</TelerikButton>
+
+
 @code {
 
     private void OnOrderClick()
